# tantivy4java

./: BATCH_OPTIMIZATION_DEVELOPERS_GUIDE.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.base-static  Dockerfile.static-build  Makefile  README.md  REMAINING_OPTIMIZATIONS.md  install-cross-compile.sh  pom.xml  pom.xml.debug  test-static-build.sh  test-ubuntu-static.sh
native/: Cargo.toml  TXLOG_DESIGN.md  build.rs  tantivy4java.version
native/src/: adaptive_tuning.rs  async_jni_bridge.rs  async_split_searcher.rs  cache_debug.rs  common.rs  debug.rs  disk_cache.rs  doc_address.rs  document.rs  extract_helpers.rs  ffi_profiler.rs  ffi_profiler_jni.rs  fst_cache.rs  global_cache.rs  index.rs  ip_expansion.rs  lib.rs  merge_types.rs  optimized_batch_retrieval.rs  parquet_schema_reader.rs  persistent_cache_storage.rs  prescan.rs  prewarm.rs  query.rs  query_conversion.rs  quickwit_split.rs  runtime_manager.rs  schema.rs  searcher.rs  searcher.rs.bak  simple_batch_optimization.rs  split_cache_manager.rs  split_query.rs  split_searcher.rs  split_searcher_replacement.rs  split_searcher_simple.rs  standalone_searcher.rs  standalone_searcher_jni.rs  test_query_parser.rs  text_analyzer.rs  (+4 more)
native/src/batch_retrieval/: mod.rs  simple.rs
native/src/batch_retrieval/optimized/: cache.rs  direct.rs  errors.rs  mod.rs  parallel.rs  range_consolidator.rs  retriever.rs  types.rs
native/src/delta_reader/: distributed.rs  engine.rs  jni.rs  mod.rs  scan.rs  serialization.rs
native/src/disk_cache/: background.rs  compression.rs  get_ops.rs  lru.rs  manifest.rs  mmap_cache.rs  mod.rs  path_helpers.rs  range_index.rs  tests.rs  types.rs  write_ops.rs
native/src/document/: helpers.rs  jni_add_fields.rs  jni_getters.rs  mod.rs  types.rs
native/src/fuse_xref/: builder.rs  jni_bindings.rs  mod.rs  query.rs  storage.rs  types.rs
native/src/global_cache/: cache_debug.rs  components.rs  config.rs  l1_cache.rs  metrics.rs  mod.rs  storage_resolver.rs
native/src/iceberg_reader/: catalog.rs  distributed.rs  jni.rs  mod.rs  scan.rs  serialization.rs
native/src/memory_pool/: disk_cache_budget.rs  jni_bridge.rs  jvm_pool.rs  mod.rs  pool.rs  reservation.rs
native/src/parquet_companion/: arrow_ffi_export.rs  arrow_ffi_import.rs  arrow_to_tant.rs  augmented_directory.rs  cached_reader.rs  coalescing.rs  doc_retrieval.rs  docid_mapping.rs  field_extraction.rs  hash_field_rewriter.rs  hash_touchup.rs  indexing.rs  manifest.rs  manifest_io.rs  merge.rs  mod.rs  name_mapping.rs  page_index.rs  parquet_storage.rs  read_strategy.rs  schema_derivation.rs  statistics.rs  store_stub.rs  streaming_ffi.rs  string_indexing.rs  transcode.rs  validation.rs
native/src/parquet_reader/: distributed.rs  jni.rs  mod.rs  serialization.rs
native/src/prewarm/: all_fields.rs  cache_extension.rs  component_sizes.rs  field_specific.rs  helpers.rs  mod.rs
native/src/query/: exists_query.rs  extraction.rs  jni_advanced.rs  jni_core.rs  json_query.rs  mod.rs  snippet.rs  wildcard.rs
native/src/quickwit_split/: download.rs  jni_functions.rs  json_discovery.rs  merge_config.rs  merge_impl.rs  merge_registry.rs  merge_types.rs  mod.rs  resilient_ops.rs  split_creation.rs  split_utils.rs  temp_management.rs  upload.rs
native/src/schema/: jni_builder.rs  jni_schema.rs  mod.rs
native/src/searcher/: aggregation.rs  batch_parsing.rs  jni_index_writer.rs  jni_searcher.rs  mod.rs
native/src/searcher/aggregation/: bucket_results.rs  byte_parsing.rs  deserialize.rs  json_helpers.rs  metric_results.rs  mod.rs  sub_aggregations.rs
native/src/split_cache_manager/: jni_cache_ops.rs  jni_lifecycle.rs  jni_metrics.rs  manager.rs  mod.rs
native/src/split_query/: ip_rewriter.rs  mod.rs  parse_query.rs  query_converters.rs  query_optimizer.rs  schema_cache.rs  wildcard_analysis.rs
native/src/split_searcher/: aggregation.rs  aggregation_arrow_ffi.rs  async_impl.rs  bulk_retrieval.rs  byterange_cache.rs  cache_config.rs  docid_collector.rs  document_retrieval.rs  fused_retrieval.rs  jni_agg_arrow.rs  jni_lifecycle.rs  jni_prewarm.rs  jni_search.rs  jni_utils.rs  mod.rs  query_utils.rs  schema_creation.rs  searcher_cache.rs  streaming_doc_retrieval.rs  types.rs
native/src/split_searcher/document_retrieval/: batch_doc_retrieval.rs  batch_serialization.rs  doc_retrieval_jni.rs  mod.rs  single_doc_retrieval.rs
native/src/standalone_searcher/: jni.rs  mod.rs  searcher.rs
native/src/txlog/: actions.rs  arrow_ffi.rs  arrow_ffi_import.rs  arrow_ffi_tests.rs  cache.rs  compression.rs  distributed.rs  error.rs  garbage_collection.rs  integration_tests.rs  jni.rs  list_files.rs  log_replay.rs  metrics.rs  mod.rs  parallel_bench_tests.rs  partition_pruning.rs  protocol_regression_tests.rs  purge.rs  purge_tests.rs  schema_dedup.rs  serialization.rs  storage.rs  streaming.rs  tombstone_distributor.rs  version_file.rs
native/src/txlog/avro/: manifest_reader.rs  manifest_writer.rs  mod.rs  schemas.rs  state_reader.rs  state_writer.rs
native/src/txlog/test_fixtures/: README.md
native/src/txlog/test_fixtures/indextables_spark_v0.5.4/01_single_write/: part-49434d1a-006a-49da-b786-ce4d644aabe7.split  part-e57f73d0-5113-4687-80e3-f79de4e93962.split
native/src/txlog/test_fixtures/indextables_spark_v0.5.4/02_five_appends/: part-000d87dc-351f-4a3a-958a-31870488def8.split  part-0dce665b-0b88-40f4-9d32-2f819bbe805c.split  part-13810d46-f3ab-45bb-8038-a8db8fdc8344.split  part-20f0fa19-ae63-4b93-b439-8cbfa5ffec97.split  part-37ed60d0-663f-4e8a-9fc0-bf52138e97a5.split  part-3c3807d1-80f8-4f52-bfa4-a57eae103694.split  part-44289db7-bae1-4dbd-9684-4e033af62daa.split  part-bee3fa7c-db1e-48db-a356-f3193a896951.split  part-eaed6739-3259-40ca-8244-634d96698a7a.split  part-f62eacf9-35ef-437f-83bc-20e6ff354fd8.split
native/src/txlog/test_fixtures/indextables_spark_v0.5.4/03_with_removes/: part-3c586d8b-c337-43ee-8aba-a44da3aea1f8.split  part-456955df-dba6-4245-bda5-44ca0368396a.split  part-7e772689-2d91-409e-927f-fe0be1580c09.split  part-c165d158-02ab-4009-b122-0e13fc49b09d.split  part-c886fdc0-fbbd-4301-b8d6-0b83c536115e.split  (+2 more)
(+1220 files in other folders)
