[package]
name = "tantivy4java"
version = "0.24.0"
edition = "2021"
license = "MIT"
authors = ["Tantivy4Java Contributors"]
description = "JNI bindings for Tantivy search engine"

[lib]
name = "tantivy4java"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Main library dependencies (for JNI functions and core search functionality)
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "80f5f1e", default-features = false, features = [
  "lz4-compression",
  "mmap",
  "quickwit",
  "zstd-compression",
] }
jni = "0.21.1"
chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9"
base64 = "0.22"
futures = "0.3.31"
once_cell = "1.19.0"
bytesize = "1.3"

# Quickwit dependencies (for main library only - binaries use lightweight approach)
# Azure feature enabled for Azure Blob Storage support
quickwit-storage = { path = "../../quickwit/quickwit/quickwit-storage", features = ["azure"] }
quickwit-metastore = { path = "../../quickwit/quickwit/quickwit-metastore" }
quickwit-proto = { path = "../../quickwit/quickwit/quickwit-proto" }
quickwit-directories = { path = "../../quickwit/quickwit/quickwit-directories" }
quickwit-common = { path = "../../quickwit/quickwit/quickwit-common" }
quickwit-config = { path = "../../quickwit/quickwit/quickwit-config" }
quickwit-search = { path = "../../quickwit/quickwit/quickwit-search" }
quickwit-indexing = { path = "../../quickwit/quickwit/quickwit-indexing" }
quickwit-doc-mapper = { path = "../../quickwit/quickwit/quickwit-doc-mapper" }
quickwit-query = { path = "../../quickwit/quickwit/quickwit-query" }

# Additional dependencies
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.45", features = ["full"] }
lazy_static = "1.4"
tempfile = "3"
postcard = { version = "1.1", features = ["heapless"] }
num_cpus = "1.0"
memmap2 = "0.9.5"
libc = "0.2"

[build-dependencies]
jni = "0.21.1"

# Debug symbols configuration for maximum debug information
[profile.dev]
debug = 2            # Maximum debug info (line tables, local variables, etc)
debug-assertions = true
overflow-checks = true
opt-level = 0        # No optimization
panic = "unwind"     # Enable stack unwinding for better backtraces
rpath = false        # Standard setting
lto = false          # No link-time optimization for debug builds
codegen-units = 256  # Parallel compilation for faster debug builds
incremental = true   # Enable incremental compilation

[profile.release]
debug = 0            # No debug info for smallest binary
debug-assertions = false
overflow-checks = false
opt-level = "z"      # Optimize for size
panic = "unwind"     # Keep unwinding tables for better error handling
lto = "thin"         # Thin LTO for good size reduction without extreme compile time
codegen-units = 1    # Single codegen unit for better optimization
incremental = false  # No incremental compilation for release
strip = true         # Strip symbols from binary