[package]
name = "tantivy4java"
version = "0.32.4"
edition = "2021"
license = "MIT"
authors = ["Tantivy4Java Contributors"]
description = "JNI bindings for Tantivy search engine"

[lib]
name = "tantivy4java"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Main library dependencies (for JNI functions and core search functionality)
# Pin to specific commit for reproducible builds (v0.22.0-indextables-1)
tantivy = { git = "https://github.com/indextables/tantivy", rev = "4b6d7d49", default-features = false, features = [
  "lz4-compression",
  "mmap",
  "quickwit",
  "zstd-compression",
] }
jni = "0.21.1"
chrono = { version = "0.4.41", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
crc32fast = "1.5"
serde_yaml = "0.9"
base64 = "0.22"
futures = "0.3.31"
once_cell = "1.19.0"
bytesize = "1.3"

# Quickwit dependencies (for main library only - binaries use lightweight approach)
# Pin to specific commit on indextables/quickwit fork (fix/zero_copy branch)
# Azure feature enabled for Azure Blob Storage support
quickwit-storage = { git = "https://github.com/indextables/quickwit", rev = "7af2361e", features = ["azure"] }
quickwit-metastore = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-proto = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-directories = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-common = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-config = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-search = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-indexing = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-doc-mapper = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }
quickwit-query = { git = "https://github.com/indextables/quickwit", rev = "7af2361e" }

# Additional dependencies
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.45", features = ["full"] }
lazy_static = "1.4"
tempfile = "3"
postcard = { version = "1.1", features = ["heapless"] }
num_cpus = "1.0"
memmap2 = "0.9.5"
stable_deref_trait = "1.2"  # For implementing StableDeref on Mmap wrapper
libc = "0.2"
lru = "0.12"  # LRU cache for searcher caching
lz4_flex = "0.11"  # Pure Rust LZ4 for disk cache compression
fs2 = "0.4"  # Disk space detection for cache auto-sizing
async-trait = "0.1"  # For Storage trait implementation
aws-sdk-s3 = "=1.62"  # For streaming file uploads (PutPayload implementation)

# Tantivy sub-crates for direct columnar serialization (bypass ColumnarWriter for string fast fields)
sstable = { git = "https://github.com/indextables/tantivy", rev = "4b6d7d49", package = "tantivy-sstable" }
common = { git = "https://github.com/indextables/tantivy", rev = "4b6d7d49", package = "tantivy-common" }

# Parquet companion mode - enables minimal splits referencing external parquet files
parquet = { version = "57", default-features = false, features = ["async", "arrow", "zstd", "lz4", "snap", "flate2", "flate2-rust_backened"] }
arrow = { version = "57", default-features = false, features = ["ffi"] }
arrow-schema = "57"
arrow-array = "57"
arrow-buffer = "57"
zstd = "0.13"
bytes = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"

# Transaction log (Avro state format for indextables txlog)
apache-avro = "0.21"
sha2 = "0.10"
flate2 = "1"
thiserror = "1"
parking_lot = "0.12"

# Delta Lake table file listing via delta-kernel-rs
delta_kernel = { version = "0.19", features = ["default-engine-rustls", "arrow"] }
object_store = { version = "0.12", features = ["aws", "azure"] }
url = "2"

# Iceberg table reading via apache/iceberg-rust
iceberg = "0.8"
iceberg-catalog-rest = "0.8"
iceberg-catalog-glue = "0.8"
iceberg-catalog-hms = "0.8"

[build-dependencies]
jni = "0.21.1"

# Patch to redirect quickwit-oss tantivy references to indextables fork (for pub mod iterable and direct columnar APIs)
# Note: [patch."indextables/tantivy"] is not needed since the main tantivy dep already points there
[patch."https://github.com/quickwit-oss/tantivy/"]
tantivy = { git = "https://github.com/indextables/tantivy", rev = "4b6d7d49" }

# Debug symbols configuration for maximum debug information
[profile.dev]
debug = 2            # Maximum debug info (line tables, local variables, etc)
debug-assertions = true
overflow-checks = true
opt-level = 0        # No optimization
panic = "unwind"     # Enable stack unwinding for better backtraces
rpath = false        # Standard setting
lto = false          # No link-time optimization for debug builds
codegen-units = 256  # Parallel compilation for faster debug builds
incremental = true   # Enable incremental compilation

[profile.release]
debug = 0            # No debug info for smallest binary
debug-assertions = false
overflow-checks = false
opt-level = "z"      # Optimize for size
panic = "unwind"     # Keep unwinding tables for better error handling
lto = "thin"         # Thin LTO for good size reduction without extreme compile time
codegen-units = 1    # Single codegen unit for better optimization
incremental = false  # No incremental compilation for release
strip = true         # Strip symbols from binary